cmake_minimum_required(VERSION 3.6)

set(CMAKE_CXX_COMPILER g++-4.8)
set(CMAKE_CXX_STANDARD 11)

project(ces23)

# Helpers only to make CLion do all its magic in those files :)
add_library(util util/io.cc util/grouped_radix.cc)
add_library(geometry bim2/geometry.cc)

add_executable(u10098 bim1/10098_fast_permutations.cc)
add_executable(u10249 bim1/10249_grand_dinner.cc)
add_executable(u105 bim1/105_skyline.cc)
add_executable(u105_easy bim1/105_skyline_easy.cc)
add_executable(u108 bim1/108_max_sum.cc)
add_executable(u111 bim1/111_hist_grading.cc)
add_executable(u644 bim1/644_imm_decod.cc)
add_executable(u775 bim1/775_hamiltonian.cc)
add_executable(u775_nice bim1/775_hamiltonian_nice.cc)
add_executable(u10078 bim2/10078_art_gallery.cc)
add_executable(u10147 bim2/10147_highways.cc)
add_executable(u10803 bim2/10803_thunder_mountain.cc)
add_executable(u11475 bim2/11475_extend_palindrome.cc)
add_executable(u374 bim2/374_bigmod.cc)
add_executable(u424 bim2/424_int_inquiry.cc)
add_executable(u452 bim2/452_project_scheduling.cc)
add_executable(u681 bim2/681_convex_hull.cc)
add_executable(u820 bim2/820_internet_bandwith.cc)
